[package]
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
description = 'serp-tes pallet template'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Apache-2.0 License'
name = 'serp-tes'
repository = 'https://github.com/Setheum-Labs/Setheum/'
version = '0.5.0-dev'

[dependencies]
serde = { version = "1.0.123", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { default-features = false, optional = true, version = '3.0.0' }

frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }

#setheum-deps
serp-market = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/serp-market", branch = "serp-market-done"}
stp258-currencies = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
stp258-traits = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-traits" }

funty = { version = "1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

num-rational = { default-features = false, version = '0.3.2' }
num-traits = { version = "0.2.14", default-features = false }
fixed = { default-features = false, version = '1.6.0' }

[dev-dependencies]
sp-core = '3.0.0'
sp-io = '3.0.0'
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    "fixed/std",
    'frame-support/std',
    'frame-system/std',
    "num-rational/std",
	"num-traits/std",
	"serde/std",
    "sp-runtime/std",
    "sp-std/std",
    "stp258-currencies/std",
    "stp258-tokens/std",
    "stp258-traits/std",
]