[package]
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
description = 'Setheum Elastic Reserve Protocol (SERP) Token Elasticity of Supply (TES) -- (SERP-TES) Pallet'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Apache-2.0 License'
name = 'serp-tes'
repository = 'https://github.com/Setheum-Labs/Setheum/'
version = '0.5.3'

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

serp-traits = { version = '0.5.3', git = "https://github.com/Setheum-Labs/serp-traits" }
orml-utilities = { version = "0.4.0", default-features = false }

funty = { version = "1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

[dev-dependencies]
sp-core = "3.0.0"
pallet-balances = "3.0.0"
stp258-serp = { version = "0.5.3", git = "https://github.com/Setheum-Labs/stp258-serp"}
stp258-standard = { version = "0.5.3", git = "https://github.com/Setheum-Labs/stp258-standard"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"serp-traits/std",
	"orml-utilities/std",
]
